kubernetes-project/project/project/traefik/traefik-ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`traefik.104.154.66.168.nip.io`) # Hostname to match
      kind: Rule
      services: # Service to redirect requests to
        - name: api@internal # Special service created by Traefik pod
          kind: TraefikService
  tls:
    certResolver: letsencrypt
    domains:
    - main: 104.154.66.168.nip.io
      sans:
      - '*.104.154.66.168.nip.io'
